fix: checkbox alignment

--- a/app/src/pages/inside/testCaseLibraryPage/testCaseList/testCaseList.scss
+++ b/app/src/pages/inside/testCaseLibraryPage/testCaseList/testCaseList.scss
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-@use '../../../../common/css/mixins';
+@use "../../../../common/css/mixins";
 
 .test-case-list {
   display: flex;
@@ -29,7 +29,7 @@
   margin-bottom: 32px;
 
   > div:first-child > div:first-child {
-    padding: 4px 0 4px 8px;
+    padding: 4px 0 4px;
   }
 }
 
@@ -40,19 +40,19 @@
   border-radius: 4px;
   box-sizing: content-box;
 
-  :global([class*='table-row-content']) {
+  :global([class*="table-row-content"]) {
     align-items: flex-start;
     min-height: 80px;
     border: 1px solid transparent;
     padding: 1px;
   }
 
-  &:hover > :global([class*='table-row-content']) {
+  &:hover > :global([class*="table-row-content"]) {
     border: 1px solid var(--rp-ui-base-topaz-focused);
     padding: 1px;
   }
 
-  &:has(.selected) > :global([class*='table-row-content']) {
+  &:has(.selected) > :global([class*="table-row-content"]) {
     border: 2px solid var(--rp-ui-base-topaz-focused);
     padding: 0;
   }
